--- a/index.html
+++ b/index.html
@@ -8,24 +8,32 @@
 	<link rel="stylesheet" href="./src/sass/css/index.css">
 </head>
 <body>
+	<nav class="nav">
+		<button class="nav__menu">
+			<span></span>
+			<span></span>
+			<span></span>
+		</button>
+		<ul class="nav__links">
+			<li>Услуги</li>
+			<li>Студия</li>
+			<li>Прайс-лист</li>
+			<li>Бьюти-школа</li>
+			<li>Контакты</li>
+		</ul>
+		<a href="#" class="nav__call button">+7 (777) 777-77-77</a>
+	</nav>
 	<header class="header">
 		<div class="container">
-			<nav class="nav">
-				<button class="nav__menu">
-					<span></span>
-					<span></span>
-					<span></span>
-				</button>
-				<ul class="nav__links">
-					<li>Услуги</li>
-					<li>Студия</li>
-					<li>Прайс-лист</li>
-					<li>Бьюти-школа</li>
-					<li>Контакты</li>
-				</ul>
-				<a href="#" class="nav__call">+7 (777) 777-77-77</a>
-			</nav>
+			<div class="header__wrap">
+				<div class="header__promo">
+					<h1>RAMZIL NAIL</h1>
+					<p>"Пространство красоты и уюта"</p>
+					<button class="button header__button">Записаться онлайн</button>
+				</div>
+			</div>
 		</div>
 	</header>
+	
 </body>
 </html>
