--- a/index.html
+++ b/index.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link rel="stylesheet" href="./src/sass/css/index.css">
+	<script type="text/javascript" src="https://dikidi.ru/assets/js/widget_record/widget2.min.js" defer></script>
 </head>
+
 <body>
+	<nav class="popup-nav">
+		<div class="popup-nav__wrap">
+			<span>
+				<h1>Навигация по сайту</h1>
+				<ul>
+					<li>- Услуги</li>
+					<li>- Студия</li>
+					<li>- Прайс-лист</li>
+					<li>- Бьюти-школа</li>
+					<li>- Контакты</li>
+				</ul>
+			</span>
+			<img id="popup-nav_close" src="./src/assets/img/close.svg" alt="">
+		</div>
+
+	</nav>
 	<nav class="nav">
-		<button class="nav__menu">
+		<button id="popup-nav_open" class="nav__menu">
 			<span></span>
 			<span></span>
 			<span></span>
@@ -29,11 +48,42 @@
 				<div class="header__promo">
 					<h1>RAMZIL NAIL</h1>
 					<p>"Пространство красоты и уюта"</p>
-					<button class="button header__button">Записаться онлайн</button>
+					<a class="button" href="https://dikidi.ru/#widget=114156">Записаться</a>
 				</div>
 			</div>
 		</div>
 	</header>
-	
+	<section class="offers">
+		<div class="container">
+			<div class="offers__wrap">
+				<a href="https://dikidi.ru/#widget=114156" class="offers__item">
+					<img class="offers__img offers__img_one" src="./src/assets/img/base_course_man.jpg"
+						alt="Записаться">
+					<h3 class="offers__title">Маникюр</h3>
+					<p>От 1000р.</p>
+				</a>
+				<a href="https://dikidi.ru/#widget=114156" class="offers__item">
+					<img class="offers__img offers__img_two" src="./src/assets/img/base_course_man.jpg"
+						alt="Записаться">
+					<h3 class="offers__title">Педикюр</h3>
+					<p>От 1000р.</p>
+				</a>
+				<a href="https://dikidi.ru/#widget=114156" class="offers__item">
+					<img class="offers__img offers__img_one" src="./src/assets/img/base_course_man.jpg"
+						alt="Записаться">
+					<h3 class="offers__title">Оформление бровей</h3>
+					<p>От 1000р.</p>
+				</a>
+				<a href="https://dikidi.ru/#widget=114156" class="offers__item">
+					<img class="offers__img offers__img_two" src="./src/assets/img/base_course_man.jpg"
+						alt="Записаться">
+					<h3 class="offers__title">Наращивание рестниц</h3>
+					<p>От 1000р.</p>
+				</a>
+			</div>
+		</div>
+	</section>
+	<script src="./src/js/popup.js"></script>
 </body>
+
 </html>
