fix: имя скрипта поменял

--- a/index.html
+++ b/index.html
@@ -56,25 +56,19 @@
 	<section class="offers">
 		<div class="container">
 			<div class="offers__wrap">
-
-
-				
 				<a href="https://dikidi.ru/#widget=114156" class="offers__item">
 					<div class="offers__img-wrap">
-						<img id="offers-img" class="offers__img offers__img_one" src="./src/assets/img/base_course_man.jpg"
-						alt="Записаться">
+						<img id="offers-img" class="offers__img offers__img_one"
+							src="./src/assets/img/base_course_man.jpg" alt="Записаться">
 						<p>Записаться</p>
 					</div>
 					<h3 class="offers__title">Маникюр</h3>
 					<p>От 1000р.</p>
 				</a>
-
-
-
 				<a href="https://dikidi.ru/#widget=114156" class="offers__item">
 					<div class="offers__img-wrap">
-						<img id="offers-img" class="offers__img offers__img_two" src="./src/assets/img/base_course_man.jpg"
-						alt="Записаться">
+						<img id="offers-img" class="offers__img offers__img_two"
+							src="./src/assets/img/base_course_man.jpg" alt="Записаться">
 						<p>Записаться</p>
 					</div>
 					<h3 class="offers__title">Педикюр</h3>
@@ -82,8 +76,8 @@
 				</a>
 				<a href="https://dikidi.ru/#widget=114156" class="offers__item">
 					<div class="offers__img-wrap">
-						<img id="offers-img" class="offers__img offers__img_one" src="./src/assets/img/base_course_man.jpg"
-						alt="Записаться">
+						<img id="offers-img" class="offers__img offers__img_one"
+							src="./src/assets/img/base_course_man.jpg" alt="Записаться">
 						<p>Записаться</p>
 					</div>
 					<h3 class="offers__title">Оформление бровей</h3>
@@ -91,8 +85,8 @@
 				</a>
 				<a href="https://dikidi.ru/#widget=114156" class="offers__item">
 					<div class="offers__img-wrap">
-						<img id="offers-img" class="offers__img offers__img_two" src="./src/assets/img/base_course_man.jpg"
-						alt="Записаться">
+						<img id="offers-img" class="offers__img offers__img_two"
+							src="./src/assets/img/base_course_man.jpg" alt="Записаться">
 						<p>Записаться</p>
 					</div>
 					<h3 class="offers__title">Наращивание рестниц</h3>
@@ -101,7 +95,10 @@
 			</div>
 		</div>
 	</section>
-	<script src="./src/js/popup.js"></script>
+	<section>
+
+	</section>
+	<script src="./src/js/index.js"></script>
 </body>
 
 </html>
