feat: скролл, знакомство с мастером

--- a/index.html
+++ b/index.html
@@ -16,11 +16,21 @@
 			<span>
 				<h1>Навигация по сайту</h1>
 				<ul>
-					<li>- Услуги</li>
-					<li>- Студия</li>
-					<li>- Прайс-лист</li>
-					<li>- Бьюти-школа</li>
-					<li>- Контакты</li>
+					<li>
+						<a href="#offers">- Услуги</a>
+					</li>
+					<li>
+						<a href="#studio">- Студия</a>
+					</li>
+					<li>
+						<a href="#price">- Прайс-лист</a>
+					</li>
+					<li>
+						<a href="">- Бьюти-школа</a>
+					</li>
+					<li>
+						<a href="#contacts">- Контакты</a>
+					</li>
 				</ul>
 			</span>
 			<img id="popup-nav_close" src="./src/assets/img/close.svg" alt="">
@@ -34,11 +44,23 @@
 			<span></span>
 		</button>
 		<ul class="nav__links">
-			<li>Услуги</li>
-			<li>Студия</li>
-			<li>Прайс-лист</li>
-			<li>Бьюти-школа</li>
-			<li>Контакты</li>
+			<ul>
+				<li>
+					<a href="#offers-scroll">Услуги</a>
+				</li>
+				<li>
+					<a href="#studio">Студия</a>
+				</li>
+				<li>
+					<a href="#price">Прайс-лист</a>
+				</li>
+				<li>
+					<a href="">Бьюти-школа</a>
+				</li>
+				<li>
+					<a href="#contacts">Контакты</a>
+				</li>
+			</ul>
 		</ul>
 		<a href="#" class="nav__call button">+7 (777) 777-77-77</a>
 	</nav>
@@ -53,7 +75,7 @@
 			</div>
 		</div>
 	</header>
-	<section class="offers">
+	<section id="offers-scroll" class="offers">
 		<div class="container">
 			<div class="offers__wrap">
 				<a href="https://dikidi.ru/#widget=114156" class="offers__item">
@@ -95,8 +117,17 @@
 			</div>
 		</div>
 	</section>
-	<section>
-
+	<section class="greet">
+		<div class="greet__dark"></div>
+		<div class="container">
+			<div class="greet__wrap">
+				<div class="greet__left">
+					<h1>Знакомство с мастером</h1>
+					<p>«Скидка 10% на первую запись»</p>
+					<a class="button greet__btn" href="https://dikidi.ru/#widget=114156">Записаться</a>
+				</div>
+			</div>
+		</div>
 	</section>
 	<script src="./src/js/index.js"></script>
 </body>
