fix: btn section

--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="./src/sass/css/index.css">
 	<script type="text/javascript" src="https://dikidi.ru/assets/js/widget_record/widget2.min.js" defer></script>
+	<script src="./src/js/index.js" defer></script>
 </head>
 
 <body>
+	<!-- Popup navigation -->
 	<nav class="popup-nav">
 		<div class="popup-nav__wrap">
 			<span>
 				<h1>Навигация по сайту</h1>
 				<ul>
 					<li>
-						<a href="#offers">- Услуги</a>
+						<a href="#offers-scroll">- Услуги</a>
 					</li>
 					<li>
 						<a href="#studio">- Студия</a>
@@ -35,8 +37,8 @@
 			</span>
 			<img id="popup-nav_close" src="./src/assets/img/close.svg" alt="">
 		</div>
-
 	</nav>
+	<!-- Navigation -->
 	<nav class="nav">
 		<button id="popup-nav_open" class="nav__menu">
 			<span></span>
@@ -64,6 +66,7 @@
 		</ul>
 		<a href="#" class="nav__call button">+7 (777) 777-77-77</a>
 	</nav>
+	<!-- Hero section -->
 	<header class="header">
 		<div class="container">
 			<div class="header__wrap">
@@ -75,6 +78,7 @@
 			</div>
 		</div>
 	</header>
+	<!-- Offers -->
 	<section id="offers-scroll" class="offers">
 		<div class="container">
 			<div class="offers__wrap">
@@ -117,6 +121,7 @@
 			</div>
 		</div>
 	</section>
+	<!-- Greet -->
 	<section class="greet">
 		<div class="greet__dark"></div>
 		<div class="container">
@@ -129,7 +134,15 @@
 			</div>
 		</div>
 	</section>
-	<script src="./src/js/index.js"></script>
+	<!-- School -->
+	<section class="school">
+		<div class="container">
+			<div class="school__wrap">
+
+			</div>
+		</div>
+	</section>
+	
 </body>
 
 </html>
