fix: title в offers

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 	<!-- Offers -->
 	<section id="offers-scroll" class="offers">
 		<div class="container">
+			<div class="offers__head">Наши услуги</div>
 			<div class="offers__wrap">
 				<a href="https://dikidi.ru/#widget=114156" class="offers__item">
 					<div class="offers__img-wrap">
