Добавил секцию про школу

--- a/index.html
+++ b/index.html
@@ -139,7 +139,28 @@
 	<section class="school">
 		<div class="container">
 			<div class="school__wrap">
+				<div class="school__left">
+					<div class="school__left__img school__left__img1">
 
+					</div>
+					<div class="school__left__img school__left__img2">
+
+					</div>
+					<!-- <div class="school__left__img school__left__img3">
+
+					</div> -->
+					<img class="school__left__mapple1" src="./src/assets/img/maple.png" alt="">
+					<img class="school__left__mapple2" src="./src/assets/img/maple.png" alt="">
+				</div>
+				<div class="school__right">
+					<div>
+						<h1>Обучение от ramzi_nail</h1>
+					<p>Если ты хочешь попробовать себя в Nail-индустрии, тогда тебе к нам, записывайся на курсы и начинай свой путь, занимаясь любимым делом</p>
+					<a href="" class="button">
+						Подробнее
+					</a>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
