--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="./src/sass/css/index.css">
 	<script type="text/javascript" src="https://dikidi.ru/assets/js/widget_record/widget2.min.js" defer></script>
+	<script src="./src/js/slider.js" defer></script>
 	<script src="./src/js/index.js" defer></script>
 </head>
 
@@ -155,16 +156,70 @@
 				<div class="school__right">
 					<div>
 						<h1>Обучение от ramzi_nail</h1>
-					<p>Если ты хочешь попробовать себя в Nail-индустрии, тогда тебе к нам, записывайся на курсы и начинай свой путь, занимаясь любимым делом</p>
-					<a href="" class="button">
-						Подробнее
-					</a>
+						<p>Если ты хочешь попробовать себя в Nail-индустрии, тогда тебе к нам, записывайся на курсы и
+							начинай свой путь, занимаясь любимым делом</p>
+						<a href="" class="button">
+							Подробнее
+						</a>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-	
+	<section class="examples">
+		<div class="container">
+			<h1 class="examples__title">Примеры работ</h1>
+			<div class="examples__wrap">
+				<img src="./src/assets/img/example.png" alt="">
+				<img src="./src/assets/img/example.png" alt="">
+				<img src="./src/assets/img/example.png" alt="">
+				<img src="./src/assets/img/example.png" alt="">
+				<img src="./src/assets/img/example.png" alt="">
+				<img src="./src/assets/img/example.png" alt="">
+				<img src="./src/assets/img/example.png" alt="">
+				<img src="./src/assets/img/example.png" alt="">
+			</div>
+		</div>
+	</section>
+	<section class="reviews">
+		<div class="container">
+			<h1 class="reviews__title">Отзывы работ</h1>
+			<h2 class="reviews__title2">"Наши клиенты всегда довольны нашими услугами"</h2>
+			<div class="reviews__wrap">
+				<div class="slider-container">
+					<a class="arrow1" id="leftArrow" href="#">
+						<img class="arrow" src="./src/assets/img/arrow.png" alt="">
+					</a>
+					<!--   <div class="slider"> -->
+					<div class="items" id="items">
+						<div class="item">
+							<img src="./src/assets/img/1 (1).png" alt="">
+						</div>
+						<div class="item">
+							<img src="./src/assets/img/1 (2).png" alt="">
+						</div>
+						<div class="item">
+							<img src="./src/assets/img/1 (3).png" alt="">
+						</div>
+						<div class="item">
+							<img src="./src/assets/img/1 (4).png" alt="">
+						</div>
+						<div class="item">
+							<img src="./src/assets/img/1 (5).png" alt="">
+						</div>
+						<div class="item">
+							<img src="./src/assets/img/1 (6).png" alt="">
+						</div>
+					</div>
+					<!--   </div> -->
+					<a class="arrow2" id="rightArrow" href="#">
+						<img class="arrow" src="./src/assets/img/arrow.png" alt="">
+					</a>
+				</div>
+
+			</div>
+		</div>
+	</section>
 </body>
 
 </html>
