--- a/index.html
+++ b/index.html
@@ -166,9 +166,11 @@
 			</div>
 		</div>
 	</section>
+	<!-- Examples -->
 	<section class="examples">
 		<div class="container">
 			<h1 class="examples__title">Примеры работ</h1>
+			<h2 class="examples__title2">"Мы сделали много и не думаем останавливаться"</h2>
 			<div class="examples__wrap">
 				<img src="./src/assets/img/example.png" alt="">
 				<img src="./src/assets/img/example.png" alt="">
@@ -181,9 +183,10 @@
 			</div>
 		</div>
 	</section>
+	<!-- Reviews -->
 	<section class="reviews">
 		<div class="container">
-			<h1 class="reviews__title">Отзывы работ</h1>
+			<h1 class="reviews__title">Отзывы клиентов</h1>
 			<h2 class="reviews__title2">"Наши клиенты всегда довольны нашими услугами"</h2>
 			<div class="reviews__wrap">
 				<div class="slider-container">
@@ -220,6 +223,9 @@
 			</div>
 		</div>
 	</section>
+	<footer class="footer">
+		
+	</footer>
 </body>
 
 </html>
