Добавил яндекс виджет

--- a/index.html
+++ b/index.html
@@ -224,7 +224,25 @@
 		</div>
 	</section>
 	<footer class="footer">
-		
+		<div class="footer__dark"></div>
+		<div class="container">
+			<div class="footer__wrap">
+				<div class="footer__left">
+					<div style="position:relative;"><a
+							href="https://yandex.ru/maps/16/yaroslavl/?utm_medium=mapframe&utm_source=maps"
+							style="color:#eee;font-size:12px;position:absolute;top:0px;">Ярославль</a><a
+							href="https://yandex.ru/maps/16/yaroslavl/search/ramzi%20nail/?ll=39.867812%2C57.580238&sctx=ZAAAAAgBEAAaKAoSCYofY%2B5aNERAERiV1AloEExAEhIJz9csl43OmT8RotCy7h8LgT8iBgABAgMEBSgKOABAu58NSAFiK3JlYXJyPXNjaGVtZV9Mb2NhbC9HZW8vRW5hYmxlQmVhdXR5RmlsdGVyPTFqAnJ1nQHNzEw9oAEAqAEAvQE%2FWuKawgEG7J%2Fc8v0E6gEA8gEA%2BAEAggIKcmFtemkgbmFpbIoCAJICBTEwMDYzmgIMZGVza3RvcC1tYXBz&sll=39.867812%2C57.580238&sspn=0.011921%2C0.003786&utm_medium=mapframe&utm_source=maps&z=17.37"
+							style="color:#eee;font-size:12px;position:absolute;top:14px;">Ramzi nail —
+							Яндекс Карты</a>
+						<iframe
+							src="https://yandex.ru/map-widget/v1/?display-text=ramzi%20nail&ll=39.867812%2C57.580238&mode=search&sctx=ZAAAAAgBEAAaKAoSCYofY%2B5aNERAERiV1AloEExAEhIJz9csl43OmT8RotCy7h8LgT8iBgABAgMEBSgKOABAu58NSAFiK3JlYXJyPXNjaGVtZV9Mb2NhbC9HZW8vRW5hYmxlQmVhdXR5RmlsdGVyPTFqAnJ1nQHNzEw9oAEAqAEAvQE%2FWuKawgEG7J%2Fc8v0E6gEA8gEA%2BAEAggIKcmFtemkgbmFpbIoCAJICBTEwMDYzmgIMZGVza3RvcC1tYXBz&sll=39.867812%2C57.580238&sspn=0.011921%2C0.003786&text=ramzi%20nail&z=17.37"
+							width="100%" height="600"style="position:relative;">
+						</iframe>
+					</div>
+				</div>
+				<div class="footer__right"></div>
+			</div>
+		</div>
 	</footer>
 </body>
 
