--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 	<script type="text/javascript" src="https://dikidi.ru/assets/js/widget_record/widget2.min.js" defer></script>
 	<script src="./src/js/slider.js" defer></script>
 	<script src="./src/js/index.js" defer></script>
+	<script type="text/javascript" src="https://spikmi.org/Widget?Id=16402" defet></script>
 </head>
 
 <body>
+	<!-- Bg video -->
 	<video autoplay muted loop id="myVideo">
 		<source src="./src/assets/video/IMG_5085-_1_ (online-video-cutter.com).mp4" type="video/mp4">
 	</video>
@@ -68,7 +70,7 @@
 				</li>
 			</ul>
 		</ul>
-		<a href="#" class="nav__call button">+7 (777) 777-77-77</a>
+		<a href="tel:89022277790" class="nav__call button">+7-902-227-77-90</a>
 	</nav>
 	<!-- Hero section -->
 	<header class="header">
@@ -144,7 +146,7 @@
 	<section id="school-scroll" class="school">
 		<div class="container">
 			<div class="school__wrap">
-				<div class="school__left  element-animation">
+				<div class="school__left element-animation">
 					<div class="school__left__img school__left__img1 element-animation">
 
 					</div>
@@ -227,24 +229,54 @@
 			</div>
 		</div>
 	</section>
+	<!-- Footer -->
 	<footer id="contacts-scroll" class="footer">
-		<div class="footer__dark"></div>
-		<div class="container">
-			<div class="footer__wrap">
-				<div class="footer__left">
-					<div style="position:relative;"><a
-							href="https://yandex.ru/maps/16/yaroslavl/?utm_medium=mapframe&utm_source=maps"
-							style="color:#eee;font-size:12px;position:absolute;top:0px;">Ярославль</a><a
-							href="https://yandex.ru/maps/16/yaroslavl/search/ramzi%20nail/?ll=39.867812%2C57.580238&sctx=ZAAAAAgBEAAaKAoSCYofY%2B5aNERAERiV1AloEExAEhIJz9csl43OmT8RotCy7h8LgT8iBgABAgMEBSgKOABAu58NSAFiK3JlYXJyPXNjaGVtZV9Mb2NhbC9HZW8vRW5hYmxlQmVhdXR5RmlsdGVyPTFqAnJ1nQHNzEw9oAEAqAEAvQE%2FWuKawgEG7J%2Fc8v0E6gEA8gEA%2BAEAggIKcmFtemkgbmFpbIoCAJICBTEwMDYzmgIMZGVza3RvcC1tYXBz&sll=39.867812%2C57.580238&sspn=0.011921%2C0.003786&utm_medium=mapframe&utm_source=maps&z=17.37"
-							style="color:#eee;font-size:12px;position:absolute;top:14px;">Ramzi nail —
-							Яндекс Карты</a>
-						<iframe
-							src="https://yandex.ru/map-widget/v1/?display-text=ramzi%20nail&ll=39.867812%2C57.580238&mode=search&sctx=ZAAAAAgBEAAaKAoSCYofY%2B5aNERAERiV1AloEExAEhIJz9csl43OmT8RotCy7h8LgT8iBgABAgMEBSgKOABAu58NSAFiK3JlYXJyPXNjaGVtZV9Mb2NhbC9HZW8vRW5hYmxlQmVhdXR5RmlsdGVyPTFqAnJ1nQHNzEw9oAEAqAEAvQE%2FWuKawgEG7J%2Fc8v0E6gEA8gEA%2BAEAggIKcmFtemkgbmFpbIoCAJICBTEwMDYzmgIMZGVza3RvcC1tYXBz&sll=39.867812%2C57.580238&sspn=0.011921%2C0.003786&text=ramzi%20nail&z=17.37"
-							width="100%" height="600"style="position:relative;">
-						</iframe>
-					</div>
+		<div class="footer__wrap">
+			<div class="footer__left">
+				<div style="all: unset; position:relative;"><a
+						href="https://yandex.ru/maps/16/yaroslavl/?utm_medium=mapframe&utm_source=maps"
+						style="color:#eee;font-size:12px;position:absolute;top:0px;">Ярославль</a>
+					<iframe style="all: unset; width: 100%; height: 450px;"
+						src="https://yandex.ru/map-widget/v1/?display-text=ramzi%20nail&ll=39.867812%2C57.580238&mode=search&sctx=ZAAAAAgBEAAaKAoSCYofY%2B5aNERAERiV1AloEExAEhIJz9csl43OmT8RotCy7h8LgT8iBgABAgMEBSgKOABAu58NSAFiK3JlYXJyPXNjaGVtZV9Mb2NhbC9HZW8vRW5hYmxlQmVhdXR5RmlsdGVyPTFqAnJ1nQHNzEw9oAEAqAEAvQE%2FWuKawgEG7J%2Fc8v0E6gEA8gEA%2BAEAggIKcmFtemkgbmFpbIoCAJICBTEwMDYzmgIMZGVza3RvcC1tYXBz&sll=39.867812%2C57.580238&sspn=0.011921%2C0.003786&text=ramzi%20nail&z=17.37">
+					</iframe>
 				</div>
-				<div class="footer__right"></div>
+			</div>
+			<div class="footer__right">
+				<div class="footer__right__wrap">
+					<h1>Наши контакты:</h1>
+					<span>"Мы всегда рады помочь вам!"</span>
+					<ul>
+						<li>
+							<div>Телефон:</div>
+							<a href="tel:89022277790">+7-902-227-77-90</a>
+						</li>
+						<li>
+							<div>What's App:</div>
+							<a href="https://api.whatsapp.com/send/?phone=89022277790&text=Здравствуйте%2C+у+меня+есть+вопрос">+7-902-227-77-90</a>
+						</li>
+						<li>
+							<div>Вконтакте:</div>
+							<a target="_blank" href="https://vk.com/ramzi_school">https://vk.com/ramzi_school</a>
+						</li>
+						<li>
+							<div>Инстаграм:</div>
+							<a href="https://instagram.com/ramzi_nail?igshid=YmMyMTA2M2Y=">@ramzil_nail</a>
+						</li>
+						<li>
+							<div>Режим работы:</div>
+							<a href="https://yandex.ru/maps/org/ramzi_nail/171233972204/?from=mapframe&ll=39.866730%2C57.581042&z=16">ПН-ВС с 9:00 – 21:00</a>
+						</li>
+						<li>
+							<div>Адрес:</div>
+							<a href="https://yandex.ru/maps/org/ramzi_nail/171233972204/?from=mapframe&ll=39.866730%2C57.581042&z=16">Ярославль, улица Ньютона, 19</a>
+						</li>
+						
+						<li class="dev">
+							<div>Сайт разработан:</div>
+							<a href="https://vk.com/is.alemy">Алексеев Максим</a>
+						</li>
+					</ul>
+				</div>
 			</div>
 		</div>
 	</footer>
