--- a/index.html
+++ b/index.html
@@ -28,9 +28,6 @@
 						<a href="#offers-scroll">- Услуги</a>
 					</li>
 					<li>
-						<a href="#studio-scroll">- Студия</a>
-					</li>
-					<li>
 						<a href="#examples-scroll">- Примры работ</a>
 					</li>
 					<li>
@@ -46,18 +43,17 @@
 	</nav>
 	<!-- Navigation -->
 	<nav class="nav">
-		<button id="popup-nav_open" class="nav__menu">
-			<span></span>
-			<span></span>
-			<span></span>
-		</button>
+		<div class="nav__menu__wrap">
+			<button id="popup-nav_open" class="nav__menu">
+				<span></span>
+				<span></span>
+				<span></span>
+			</button>
+		</div>
 		<ul class="nav__links">
 			<ul>
 				<li>
 					<a href="#offers-scroll">Услуги</a>
-				</li>
-				<li>
-					<a href="#studio-scroll">Студия</a>
 				</li>
 				<li>
 					<a href="#examples-scroll">Примры работ</a>
@@ -93,38 +89,38 @@
 				<a href="https://dikidi.ru/#widget=114156" class="offers__item  element-animation">
 					<div class="offers__img-wrap">
 						<img id="offers-img" class="offers__img offers__img_one"
-							src="./src/assets/img/base_course_man.jpg" alt="Записаться">
+							src="./src/assets/img/Маникюр.jpg" alt="Записаться">
 						<p>Записаться</p>
 					</div>
 					<h3 class="offers__title">Маникюр</h3>
-					<p>От 1000р.</p>
+					<p>От 900р.</p>
 				</a>
 				<a href="https://dikidi.ru/#widget=114156" class="offers__item  element-animation">
 					<div class="offers__img-wrap">
 						<img id="offers-img" class="offers__img offers__img_two"
-							src="./src/assets/img/base_course_man.jpg" alt="Записаться">
+							src="./src/assets/img/Педикюр.jpg" alt="Записаться">
 						<p>Записаться</p>
 					</div>
 					<h3 class="offers__title">Педикюр</h3>
-					<p>От 1000р.</p>
+					<p>От 1100р.</p>
 				</a>
 				<a href="https://dikidi.ru/#widget=114156" class="offers__item  element-animation">
 					<div class="offers__img-wrap">
 						<img id="offers-img" class="offers__img offers__img_one"
-							src="./src/assets/img/base_course_man.jpg" alt="Записаться">
+							src="./src/assets/img/main/4.png" alt="Записаться">
 						<p>Записаться</p>
 					</div>
 					<h3 class="offers__title">Оформление бровей</h3>
-					<p>От 1000р.</p>
+					<p>От 400р.</p>
 				</a>
 				<a href="https://dikidi.ru/#widget=114156" class="offers__item  element-animation">
 					<div class="offers__img-wrap">
 						<img id="offers-img" class="offers__img offers__img_two"
-							src="./src/assets/img/base_course_man.jpg" alt="Записаться">
+							src="./src/assets/img/Наращивание ресниц.jpeg" alt="Записаться">
 						<p>Записаться</p>
 					</div>
 					<h3 class="offers__title">Наращивание рестниц</h3>
-					<p>От 1000р.</p>
+					<p>От 800р.</p>
 				</a>
 			</div>
 		</div>
@@ -247,10 +243,6 @@
 					<span>"Мы всегда рады помочь вам!"</span>
 					<ul>
 						<li>
-							<div>Телефон:</div>
-							<a href="tel:89022277790">+7-902-227-77-90</a>
-						</li>
-						<li>
 							<div>What's App:</div>
 							<a href="https://api.whatsapp.com/send/?phone=89022277790&text=Здравствуйте%2C+у+меня+есть+вопрос">+7-902-227-77-90</a>
 						</li>
@@ -269,11 +261,6 @@
 						<li>
 							<div>Адрес:</div>
 							<a href="https://yandex.ru/maps/org/ramzi_nail/171233972204/?from=mapframe&ll=39.866730%2C57.581042&z=16">Ярославль, улица Ньютона, 19</a>
-						</li>
-						
-						<li class="dev">
-							<div>Сайт разработан:</div>
-							<a href="https://vk.com/is.alemy">Алексеев Максим</a>
 						</li>
 					</ul>
 				</div>
