--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>ramzi_nail | Маникюр, педикюр, оформление бровей, наращивание ресниц</title>
+	<link rel="shortcut icon" href="./src/assets/img/icon.png" type="image/png">
 	<link rel="stylesheet" href="./src/sass/css/index.css">
 	<script type="text/javascript" src="https://dikidi.ru/assets/js/widget_record/widget2.min.js" defer></script>
 	<script src="./src/js/slider.js" defer></script>
@@ -16,7 +17,7 @@
 <body>
 	<!-- Bg video -->
 	<video autoplay muted loop id="myVideo">
-		<source src="./src/assets/video/IMG_5085-_1_ (online-video-cutter.com).mp4" type="video/mp4">
+		<source src="./src/assets/video/IMG_5095.mp4" type="video/mp4">
 	</video>
 	<!-- Popup navigation -->
 	<nav class="popup-nav">
