Добавил ramzil_school стр

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<a href="#examples-scroll">- Примры работ</a>
 					</li>
 					<li>
-						<a href="">- Бьюти-школа</a>
+						<a href="./courses.html">- ramzil_school</a>
 					</li>
 					<li>
 						<a href="#contacts-scroll">- Контакты</a>
@@ -60,7 +60,7 @@
 					<a href="#examples-scroll">Примры работ</a>
 				</li>
 				<li>
-					<a href="">Бьюти-школа</a>
+					<a href="./courses.html">ramzil_school</a>
 				</li>
 				<li>
 					<a href="#contacts-scroll">Контакты</a>
@@ -161,7 +161,7 @@
 						<h1>Обучение от ramzi_nail</h1>
 						<p>Если ты хочешь попробовать себя в Nail-индустрии, тогда тебе к нам, записывайся на курсы и
 							начинай свой путь, занимаясь любимым делом</p>
-						<a href="" class="button">
+						<a href="./courses.html" class="button">
 							Подробнее
 						</a>
 					</div>
