--- a/courses.html
+++ b/courses.html
@@ -16,6 +16,7 @@
 
 <body>
 	<!-- Bg video -->
+	<div id="darkness" class="darkness"></div>
 	<video autoplay muted loop id="myVideo">
 		<source src="./src/assets/video/IMG_5085-_1_ (online-video-cutter.com).mp4" type="video/mp4">
 	</video>
