--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body>
 	<!-- Bg video -->
+	<div id="darkness" class="darkness"></div>
 	<video autoplay muted loop id="myVideo">
 		<source src="./src/assets/video/IMG_5095.mp4" type="video/mp4">
 	</video>
