Подготовил вторую страничку для верстки

--- a/courses.html
+++ b/courses.html
@@ -81,150 +81,9 @@
 			</div>
 		</div>
 	</header>
-	<!-- Offers -->
-	<section id="offers-scroll" class="offers">
-		<div class="container">
-			<div class="offers__head element-animation">Наши услуги</div>
-			<div class="offers__text element-animation">"Мы можем много и немножко больше!"</div>
-			<div class="offers__wrap">
-				<a href="https://dikidi.ru/#widget=114156" class="offers__item  element-animation">
-					<div class="offers__img-wrap">
-						<img id="offers-img" class="offers__img offers__img_one"
-							src="./src/assets/img/Маникюр.jpg" alt="Записаться">
-						<p>Записаться</p>
-					</div>
-					<h3 class="offers__title">Маникюр</h3>
-					<p>От 900р.</p>
-				</a>
-				<a href="https://dikidi.ru/#widget=114156" class="offers__item  element-animation">
-					<div class="offers__img-wrap">
-						<img id="offers-img" class="offers__img offers__img_two"
-							src="./src/assets/img/Педикюр.jpg" alt="Записаться">
-						<p>Записаться</p>
-					</div>
-					<h3 class="offers__title">Педикюр</h3>
-					<p>От 1100р.</p>
-				</a>
-				<a href="https://dikidi.ru/#widget=114156" class="offers__item  element-animation">
-					<div class="offers__img-wrap">
-						<img id="offers-img" class="offers__img offers__img_one"
-							src="./src/assets/img/main/4.png" alt="Записаться">
-						<p>Записаться</p>
-					</div>
-					<h3 class="offers__title">Оформление бровей</h3>
-					<p>От 400р.</p>
-				</a>
-				<a href="https://dikidi.ru/#widget=114156" class="offers__item  element-animation">
-					<div class="offers__img-wrap">
-						<img id="offers-img" class="offers__img offers__img_two"
-							src="./src/assets/img/Наращивание ресниц.jpeg" alt="Записаться">
-						<p>Записаться</p>
-					</div>
-					<h3 class="offers__title">Наращивание рестниц</h3>
-					<p>От 800р.</p>
-				</a>
-			</div>
-		</div>
-	</section>
-	<!-- Greet -->
-	<section id="studio-scroll" class="greet">
-		<div class="greet__dark"></div>
-		<div class="container">
-			<div class="greet__wrap">
-				<div class="greet__left">
-					<h1>Знакомство с мастером</h1>
-					<p>«Скидка 10% на первую запись»</p>
-					<a class="button greet__btn" href="https://dikidi.ru/#widget=114156">Записаться</a>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- School -->
-	<section id="school-scroll" class="school">
-		<div class="container">
-			<div class="school__wrap">
-				<div class="school__left element-animation">
-					<div class="school__left__img school__left__img1 element-animation">
+	<!-- About -->
+	<section class="about">
 
-					</div>
-					<div class="school__left__img school__left__img2  element-animation">
-
-					</div>
-					<!-- <div class="school__left__img school__left__img3">
-
-					</div> -->
-					<img class="school__left__mapple1" src="./src/assets/img/maple.png" alt="">
-					<img class="school__left__mapple2" src="./src/assets/img/maple.png" alt="">
-				</div>
-				<div class="school__right">
-					<div>
-						<h1>Обучение от ramzi_nail</h1>
-						<p>Если ты хочешь попробовать себя в Nail-индустрии, тогда тебе к нам, записывайся на курсы и
-							начинай свой путь, занимаясь любимым делом</p>
-						<a href="" class="button">
-							Подробнее
-						</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- Examples -->
-	<section id="examples-scroll" class="examples">
-		<div class="container">
-			<h1 class="examples__title">Примеры работ</h1>
-			<h2 class="examples__title2">"Мы сделали много и не думаем останавливаться"</h2>
-			<div class="examples__wrap">
-				<img class="rotate_left  element-animation" src="./src/assets/img/main/1.png" alt="">
-				<img class="rotate_right" src="./src/assets/img/main/4.png" alt="">
-				<img class="rotate_left element-animation" src="./src/assets/img/main/3.png" alt="">
-				<img class="rotate_right" src="./src/assets/img/main/6.jpeg" alt="">
-				<img class="rotate_right element-animation" src="./src/assets/img/main/7.jpeg" alt="">
-				<img class="rotate_left" src="./src/assets/img/main/2.png" alt="">
-				<img class="rotate_right element-animation" src="./src/assets/img/main/8.jpeg" alt="">
-				<img class="rotate_left" src="./src/assets/img/main/5.png" alt="">
-			</div>
-		</div>
-	</section>
-	<!-- Reviews -->
-	<section class="reviews">
-		<div class="container">
-			<h1 class="reviews__title">Отзывы клиентов</h1>
-			<h2 class="reviews__title2">"Наши клиенты всегда довольны нашими услугами"</h2>
-			<div class="reviews__wrap">
-				<div class="slider-container  element-animation">
-					<a class="arrow1" id="leftArrow" href="#">
-						<img class="arrow" src="./src/assets/img/arrow.png" alt="">
-					</a>
-					<!--   <div class="slider"> -->
-					<div class="items" id="items">
-						<div class="item">
-							<img src="./src/assets/img/1 (1).png" alt="">
-						</div>
-						<div class="item">
-							<img src="./src/assets/img/1 (2).png" alt="">
-						</div>
-						<div class="item">
-							<img src="./src/assets/img/1 (3).png" alt="">
-						</div>
-						<div class="item">
-							<img src="./src/assets/img/1 (4).png" alt="">
-						</div>
-						<div class="item">
-							<img src="./src/assets/img/1 (5).png" alt="">
-						</div>
-						<div class="item">
-							<img src="./src/assets/img/1 (6).png" alt="">
-						</div>
-					</div>
-					<!--   </div> -->
-					<a class="arrow2" id="rightArrow" href="#">
-						<img class="arrow" src="./src/assets/img/arrow.png" alt="">
-					</a>
-				</div>
-
-			</div>
-		</div>
 	</section>
 	<!-- Footer -->
 	<footer id="contacts-scroll" class="footer">
