Добавил секцию about

--- a/courses.html
+++ b/courses.html
@@ -83,7 +83,47 @@
 	</header>
 	<!-- About -->
 	<section class="about">
-
+		<div class="container">
+			<div class="about__wrap">
+				<div class="about__wrap__left">
+					<div class="about__wrap__left__info">
+						<h1>Обо мне</h1>
+						<ul>
+							<li>
+								<span>Медицинское среднеспециональное образование</span>
+							</li>
+							<li>
+								<span>Дополнительное образование</span> подолога « Лечение и восстановление травмированных и
+								деформированных
+								ногтей, обработка кожи рук и стоп людей с хроническими заболеваниями»
+							</li>
+							<li>
+								<span>Дополнительное образование</span> по направлению инструктор ногтевого сервиса с лицензией
+								Право выдавать дипломы о дополнительном образовании мастера ногтевого сервиса
+							</li>
+						</ul>
+						<h2>А так же: </h2>
+						<ul class="about__wrap__left__info_bg">
+							<li>
+								<span>7 лет</span> в nail индустрии
+							</li>
+							<li>
+								<span>Более 45</span> обучающих курсов стоимостью 400.000
+							</li>
+							<li>
+								<span>Обладатель Гран При</span> в международном чемпионате по маникюру и педикюру «Золотая Долина» 9
+								золотых, 2 серебряных и одна бронзовая победы
+							</li>
+							<li>
+								<span>Более 8000 маникюров 5000 наращиваний</span> за моими плечами
+							</li>
+						</ul>
+					</div>
+					<!-- <img class="about__wrap__left__mapple" src="./src/assets/img/maple.png" alt=""> -->
+					<img class="about__wrap__left__self" src="./src/assets/img/self.png" alt="">
+				</div>
+			</div>
+		</div>
 	</section>
 	<!-- Footer -->
 	<footer id="contacts-scroll" class="footer">
@@ -104,7 +144,8 @@
 					<ul>
 						<li>
 							<div>What's App:</div>
-							<a href="https://api.whatsapp.com/send/?phone=89022277790&text=Здравствуйте%2C+у+меня+есть+вопрос">+7-902-227-77-90</a>
+							<a
+								href="https://api.whatsapp.com/send/?phone=89022277790&text=Здравствуйте%2C+у+меня+есть+вопрос">+7-902-227-77-90</a>
 						</li>
 						<li>
 							<div>Вконтакте:</div>
@@ -116,11 +157,15 @@
 						</li>
 						<li>
 							<div>Режим работы:</div>
-							<a href="https://yandex.ru/maps/org/ramzi_nail/171233972204/?from=mapframe&ll=39.866730%2C57.581042&z=16">ПН-ВС с 9:00 – 21:00</a>
+							<a
+								href="https://yandex.ru/maps/org/ramzi_nail/171233972204/?from=mapframe&ll=39.866730%2C57.581042&z=16">ПН-ВС
+								с 9:00 – 21:00</a>
 						</li>
 						<li>
 							<div>Адрес:</div>
-							<a href="https://yandex.ru/maps/org/ramzi_nail/171233972204/?from=mapframe&ll=39.866730%2C57.581042&z=16">Ярославль, улица Ньютона, 19</a>
+							<a
+								href="https://yandex.ru/maps/org/ramzi_nail/171233972204/?from=mapframe&ll=39.866730%2C57.581042&z=16">Ярославль,
+								улица Ньютона, 19</a>
 						</li>
 					</ul>
 				</div>
