--- a/courses.html
+++ b/courses.html
@@ -125,6 +125,40 @@
 			</div>
 		</div>
 	</section>
+	<section class="process">
+		<div class="container">
+			<div class="process__wrap">
+				<div class="process__item">
+					<img src="./src/assets/img/round_nails.png" alt="">
+					<p>"Обучаем профессии мастера маникюра с нуля"</p>
+				</div>
+				<div class="process__item">
+					<img src="./src/assets/img/round_scissors.png" alt="">
+					<p>"Предоставляем все материалы и моделей для обработки"</p>
+				</div>
+				<div class="process__item">
+					<img src="./src/assets/img/round_grade.png" alt="">
+					<p>"Выдаем диплом государственного образца по окончанию обучения"</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="courses">
+		<div class="container">
+			<div class="courses__title">
+				<h1>Наши курсы</h1>
+				<p>"В каждый курс мы вкладываем нашу душу и опыт"</p>
+			</div>
+			<div class="courses__wrap">
+				<div class="courses__item">
+					<img src="./src/assets/img/base_course_man.jpg" alt="">
+					<div class="courses__item__info">
+						<h2>Чек-лист мастера</h2>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 	<!-- Footer -->
 	<footer id="contacts-scroll" class="footer">
 		<div class="footer__wrap">
